--- a/Project-101-kittens-carousel-static-website-ec2/website.yml
+++ b/Project-101-kittens-carousel-static-website-ec2/website.yml
@@ -32,6 +32,23 @@ Resources:
       Tags: 
         - Key: Key
           Value: WebServer-CodeRell
-      UserData: String
+      UserData:
+        Fn::Base64:
+        |
+          #!/bin/bash -x
+          yum update -y
+          yum install httpd -y
+          cd /var/wwww/html
+          FOLDER="https://raw.githubusercontent.com/CodeRell/my-repositories/main/Project-101-kittens-carousel-static-website-ec2/static-web/"
+          wget ${FOLDER}index.html
+          wget ${FOLDER}cat0.jpg
+          wget ${FOLDER}cat1.jpg
+          wget ${FOLDER}cat2.jpg
+          wget ${FOLDER}cat3.png
+          systemctl start httpd
+          systemctl enable httpd
+
+
+
 
 #Outputs:
