--- a/Project-101-kittens-carousel-static-website-ec2/website.yml
+++ b/Project-101-kittens-carousel-static-website-ec2/website.yml
@@ -30,7 +30,7 @@ Resources:
       SecurityGroupIds: 
         - !Ref WebServerSecurityGroup
       Tags: 
-        - Key: Key
+        - Key: Name
           Value: WebServer-CodeRell
       UserData:
         Fn::Base64:
