--- a/Project-001-Roman-Numerals-Converter/cfn-template.yml
+++ b/Project-001-Roman-Numerals-Converter/cfn-template.yml
@@ -1,39 +1,59 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: |
   CloudFormation template for roman numerals web app
+  
 Parameters:
-
-   KeyPair:
+​
+  KeyPair:
     Description: Key Pair for EC2 Instance
     Type: AWS::EC2::KeyPair::KeyName
-
+​
+  LatestAmiId:
+    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
+    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
+  
 Resources:
-
- WebServerSecurityGroup:
+​
+  WebServerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
-    Properties: 
+    Properties:
       GroupDescription: Enable HTTP and SSH for webserver
-      GroupName: WebServerSecGrp
+      GroupName: WebserverSecGrp
       SecurityGroupIngress: 
-        - CidrIp: 0.0.0.0/0
+        - IpProtocol: tcp
           FromPort: 22
-          IpProtocol: tcp
           ToPort: 22
+          CidrIp: 0.0.0.0/0
         - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
           CidrIp: 0.0.0.0/0
-
-  WebServer:
+​
+  WebServerHost:
     Type: AWS::EC2::Instance
     Properties:
-      ImageId: ami-0b5eea76982371e91
-      KeyName: !Ref KeyName
+      ImageId: !Ref LatestAmiId
       InstanceType: t2.micro
-      SecurityGroupIds: 
-        - !Ref WebServerSecurityGroup
-      Tags: 
-        - Key: Name
-          Value: WebServer-CodeRell
-      UserData:
+      KeyName: !Ref KeyPair
+      SecurityGroupIds:
+      - !Ref WebServerSecurityGroup
+      Tags:
+      - Key: Name
+        Value: WebServer
+      UserData: !Base64 |
+        #!/bin/bash -x
+​
+        yum update -y
+        yum install python3 -y
+        pip3 install flask
+        cd /home/ec2-user
+        FOLDER="https://raw.githubusercontent.com/altazbhanji/my-repository/main/Project-001-Roman-Numerals-Converter"
+        wget ${FOLDER}/app.py
+        mkdir templates
+        cd templates
+        wget ${FOLDER}/templates/index.html
+        wget ${FOLDER}/templates/result.html
+        cd ..
+        python3 app.py
+​
 # Outputs:
