--- a/Project-001-Roman-Numerals-Converter/cfn-template.yml
+++ b/Project-001-Roman-Numerals-Converter/cfn-template.yml
@@ -40,20 +40,18 @@ Resources:
       Tags:
       - Key: Name
         Value: WebServer
-      UserData: !Base64 |
-        #!/bin/bash -x
-​
-        yum update -y
-        yum install python3 -y
-        pip3 install flask
-        cd /home/ec2-user
-        FOLDER="https://raw.githubusercontent.com/altazbhanji/my-repository/main/Project-001-Roman-Numerals-Converter"
-        wget ${FOLDER}/app.py
-        mkdir templates
-        cd templates
-        wget ${FOLDER}/templates/index.html
-        wget ${FOLDER}/templates/result.html
-        cd ..
-        python3 app.py
-​
+      UserData: #!/bin/bash -x
+
+yum update -y
+yum install python3 -y
+pip3 install flask
+cd /home/ec2-user
+FOLDER="https://raw.githubusercontent.com/CodeRell/my-repositories/main/Project-001-Roman-Numerals-Converter"
+wget ${FOLDER}/app.py
+mkdir templates
+cd templates
+wget ${FOLDER}/templates/index.html
+wget ${FOLDER}/templates/result.html
+cd ..
+python3 app.py
 # Outputs:
