--- a/Project-001-Roman-Numerals-Converter/cfn-template.yml
+++ b/Project-001-Roman-Numerals-Converter/cfn-template.yml
@@ -3,17 +3,17 @@ Description: |
   CloudFormation template for roman numerals web app
   
 Parameters:
-​
+
   KeyPair:
     Description: Key Pair for EC2 Instance
     Type: AWS::EC2::KeyPair::KeyName
-​
+
   LatestAmiId:
     Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
     Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
   
 Resources:
-​
+
   WebServerSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
@@ -28,7 +28,7 @@ Resources:
           FromPort: 80
           ToPort: 80
           CidrIp: 0.0.0.0/0
-​
+
   WebServerHost:
     Type: AWS::EC2::Instance
     Properties:
@@ -40,18 +40,20 @@ Resources:
       Tags:
       - Key: Name
         Value: WebServer
-      UserData: #!/bin/bash -x
+      UserData: !Base64 |
+        #!/bin/bash -x
 
-yum update -y
-yum install python3 -y
-pip3 install flask
-cd /home/ec2-user
-FOLDER="https://raw.githubusercontent.com/CodeRell/my-repositories/main/Project-001-Roman-Numerals-Converter"
-wget ${FOLDER}/app.py
-mkdir templates
-cd templates
-wget ${FOLDER}/templates/index.html
-wget ${FOLDER}/templates/result.html
-cd ..
-python3 app.py
+        yum update -y
+        yum install python3 -y
+        pip3 install flask
+        cd /home/ec2-user
+        FOLDER="https://raw.githubusercontent.com/CodeRell/my-repositories/main/Project-001-Roman-Numerals-Converter"
+        wget ${FOLDER}/app.py
+        mkdir templates
+        cd templates
+        wget ${FOLDER}/templates/index.html
+        wget ${FOLDER}/templates/result.html
+        cd ..
+        python3 app.py
+
 # Outputs:
